--- a/assets/.npm/package.json
+++ b/assets/.npm/package.json
@@ -1,20 +1,26 @@
 {
-  "name": "ssv-patternlab-styleguide",
-  "version": "1.0.0",
-  "main": "Gulpfile.js",
   "devDependencies": {
-    "browser-sync": "^2.10.0",
-    "gulp": "^3.9.0",
-    "gulp-autoprefixer": "^3.1.0",
-    "gulp-filter": "^2.0.2",
-    "gulp-jshint": "^1.11.2",
-    "gulp-shell": "^0.6.3",
-    "gulp-sass": "^2.0.4",
-    "gulp-scss-lint": "^0.3.6",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-csso": "^3.0.1",
-    "gulp-minify": "^3.1.0",
-    "gulp-uglify": "^3.0.2"
+    "autoprefixer": "^10.4.0",
+    "cssnano": "^5.0.11",
+    "eslint": "^7.32.0",
+    "eslint-config-standard": "^16.0.3",
+    "eslint-plugin-import": "^2.25.3",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^5.1.1",
+    "fancy-log": "^1.3.3",
+    "gulp-postcss": "^9.0.1",
+    "gulp-sass": "^5.0.0",
+    "log": "^6.3.1",
+    "postcss": "^8.4.0",
+    "postcss-nested": "^5.0.6",
+    "postcss-reporter": "^7.0.4",
+    "postcss-scss": "^4.0.2",
+    "sass": "^1.43.5",
+    "stylelint": "^14.1.0",
+    "tape": "^5.3.2"
   },
-  "license": "ISC"
+  "dependencies": {
+    "gulp": "^4.0.2",
+    "gulp-eslint-new": "^1.0.0"
+  }
 }
