--- a/assets/.npm/package.json
+++ b/assets/.npm/package.json
@@ -20,6 +20,10 @@
     "tape": "^5.3.2"
   },
   "dependencies": {
+    "@pattern-lab/cli": "^5.15.5",
+    "@pattern-lab/core": "^5.15.5",
+    "@pattern-lab/engine-twig-php": "^5.15.5",
+    "@pattern-lab/uikit-workshop": "^5.15.7",
     "gulp": "^4.0.2",
     "gulp-eslint-new": "^1.0.0"
   }
